--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,9 @@ dependencies {
 
     implementation 'org.greenrobot:eventbus:3.1.1'
 
+    implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
+
+
+
 
 }
