--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
@@ -31,13 +31,12 @@ dependencies {
     //firebase auth
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation 'com.google.firebase:firebase-core:17.1.0'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
 
     //Firebase Database
-    implementation 'com.google.firebase:firebase-database:19.0.0'
-    implementation 'com.google.firebase:firebase-storage:19.0.0'
-
-
+    implementation 'com.google.firebase:firebase-database:19.1.0'
+    implementation 'com.google.firebase:firebase-storage:19.0.1'
+    
     // facebooklogin
     implementation 'com.facebook.android:facebook-login:[5,6)'
 
@@ -45,13 +44,8 @@ dependencies {
     //implementation 'com.firebase:geofire-android:2.1.1'
     implementation 'com.firebase:geofire-android:3.0.0'
 
-
-    //bottom library
-    implementation 'com.tbuonomo:morph-bottom-navigation:1.0.1'
-
     //circuler imageview
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
 
     //Google Services
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
@@ -59,12 +53,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.0.0'
 
-
     //Firestore
     implementation 'com.google.firebase:firebase-firestore:20.2.0'
 
     //Picker Library
-        implementation 'com.ramesh.mypicker:pickerview:1.1'
+    implementation 'com.ramesh.mypicker:pickerview:1.1'
 
     //Json
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
@@ -72,13 +65,9 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
     //EVENTBUS
-
     implementation 'org.greenrobot:eventbus:3.1.1'
-
-    implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
-
-
-
+    implementation 'com.google.android.material:material:1.0.0'
 
 }
