--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
+
+            <meta-data
+                android:name="firebase_performance_logcat_enabled"
+                android:value="true" />
         <activity
             android:name=".Activity.Activity.MapsActivity"
             android:label="@string/title_activity_maps" />
