--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,16 @@ buildscript {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
-
-
-
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.31.0'
+        classpath 'com.google.firebase:perf-plugin:1.3.1'
+
 
 
         // NOTE: Do not place your application dependencies here; they belong
