--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.Activity.DetailActivity"></activity>
+        <activity android:name=".Activity.Activity.DetailActivity"
+            android:theme="@style/AppTheme"></activity>
         <activity android:name=".Activity.Activity.MessageActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -38,7 +39,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.Activity.MainActivity"></activity>
+        <activity android:name=".Activity.Activity.MainActivity">
+
+        </activity>
         <activity android:name=".Activity.Activity.LoginActivity"></activity>
         <activity
             android:name="com.facebook.FacebookActivity"
