--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,18 +27,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-ads:18.2.0'
+    implementation 'com.google.android.gms:play-services-ads:18.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //firebase auth
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.firebase:firebase-core:17.2.0'
 
     //Firebase Database
     implementation 'com.google.firebase:firebase-database:19.1.0'
-    implementation 'com.google.firebase:firebase-storage:19.0.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
 
     // Retrofit2 and messaging.
 
@@ -58,8 +60,8 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[5,6)'
 
     //Geofire firebase location
-    //implementation 'com.firebase:geofire-android:2.1.1'
-    implementation 'com.firebase:geofire-android:3.0.0'
+    implementation 'com.firebase:geofire-android:2.1.2'
+    //implementation 'com.firebase:geofire-android:3.0.0'
 
     //circuler imageview
     implementation 'de.hdodenhof:circleimageview:2.2.0'
@@ -71,13 +73,14 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.0.0'
 
     //Firestore
-    implementation 'com.google.firebase:firebase-firestore:20.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.1.1'
 
     //Picker Library
     implementation 'com.ramesh.mypicker:pickerview:1.1'
 
     //Json
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
