--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.merttoptas.bringit">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:targetSandboxVersion="2"
+    package="com.merttoptas.bringit"
+    tools:targetApi="o">
 
     <application
         android:allowBackup="true"
