--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,27 +4,52 @@ apply plugin: 'io.fabric'
 apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
+    signingConfigs {
+        debug {
+            storePassword 'Mt152121'
+            keyAlias = 'key0'
+            storeFile file('/Users/mertcantoptas/Desktop/Application/BringIt')
+            keyPassword 'Mt152121'
+        }
+        config {
+            storeFile file('/Users/mertcantoptas/Desktop/Application/BringIt')
+            keyAlias = 'key0'
+            storePassword 'Mt152121'
+            keyPassword 'Mt152121'
+        }
+    }
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
         applicationId "com.merttoptas.bringit"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 2
-        versionName "2"
+        versionCode 4
+        versionName "2.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            debuggable = true
+            signingConfig signingConfigs.config
         }
+        debug {
+            signingConfig signingConfigs.config
+        }
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 }
 
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-ads:18.2.0'
@@ -39,29 +64,29 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.2.0'
 
     //Firebase Database
-    implementation 'com.google.firebase:firebase-database:19.1.0'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
 
     // Retrofit2 and messaging.
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //Firebase message
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
-    //firebase crasch
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
+    // Firebase Crash and analytic
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
 
-    //firebase performance
+    //firebase performance and Ads
     implementation 'com.google.firebase:firebase-perf:19.0.0'
-
+    implementation 'com.google.firebase:firebase-ads:18.2.0'
 
     // facebooklogin
-    implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 
     //Geofire firebase location
-    implementation 'com.firebase:geofire-android:2.1.2'
-    //implementation 'com.firebase:geofire-android:3.0.0'
+    implementation 'com.firebase:geofire-android:3.0.0'
 
     //circuler imageview
     implementation 'de.hdodenhof:circleimageview:2.2.0'
@@ -73,13 +98,13 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.0.0'
 
     //Firestore
-    implementation 'com.google.firebase:firebase-firestore:21.1.1'
+    implementation 'com.google.firebase:firebase-firestore:21.2.0'
 
     //Picker Library
     implementation 'com.ramesh.mypicker:pickerview:1.1'
 
     //Json
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
