--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:targetSandboxVersion="2"
     package="com.merttoptas.bringit"
+    android:versionCode="4"
+    android:versionName="2.2"
     tools:targetApi="o">
 
     <application
@@ -11,6 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme">
         <activity android:name=".Activity.Activity.SliderActivity"></activity>
         <activity
